# Terascale26-ML-Tutorials

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: faq.md  getting-started.md  index.md  installation.md  troubleshooting.md
docs/stylesheets/: extra.css
docs/tutorials/: tutorial-1.md  tutorial-2.md  tutorial-3.md  tutorial-4.md  tutorial-5.md
tutorial_1_polynomial_fit/: tutorial_poly_fit.ipynb
tutorial_1_polynomial_fit/polynomial_tutorial/: Regressor.py  __init__.py
tutorial_2_perceptron-to-DNN/: pyproject.toml  tutorial_DNN.ipynb
tutorial_2_perceptron-to-DNN/perceptron_to_DNN_tutorial/: MultiLayerPerceptron.py  __init__.py  loss.py  main.py  plotting.py  train.py  utils.py
tutorial_3_from_DNNs_to_Transformers/: pyproject.toml  tutorial_DNN_to_Transformer.ipynb
tutorial_3_from_DNNs_to_Transformers/DNNs_to_Transformer_tutorial/: CNN_AR.py  CNN_AR_v2.py  MultiLayerPerceptron_AR.py  Transformer_AR.py  data_generator.py  data_generator_multiscale.py  logger.py  loss.py  main.py  plotting.py  utils.py
tutorial_4_ddpm/: tutorial_notebook.ipynb
tutorial_5_flow_matching/: tutorial_notebook_Flow.ipynb
