[project]
name = "perceptron-to-DNN_tutorial"
version = "0.1.0"
description = "Tutorial 2: Perceptron to DNN regression solving"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "torch>=2.9.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.25.0",
    "jupyterlab>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["perceptron_to_DNN_tutorial"]

[project.scripts]
perceptron-to-DNN-tutorial = "perceptron_to_DNN_tutorial.main:main"

